deployments/frontoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devopsbeerer-frontoffice
  name: devopsbeerer-frontoffice
  namespace: devopsbeerer-frontoffice
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: devopsbeerer-frontoffice
