deployments/frontoffice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsbeerer-frontoffice
  namespace: devopsbeerer-frontoffice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "ca-cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.devopsbeerer.local
      secretName: app-tls
  rules:
    - host: "app.devopsbeerer.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopsbeerer-frontoffice
                port:
                  number: 8080
